# spark-cli

./: Cargo.toml  README.md
.product/: how-contract.yaml
.product/author-domain/spark-cli/: session.json  spark-cli.ttl
.product/deciders/: serving-host-decider.conform.json  serving-host-decider.yaml
.product/deliverables/: deliverable-host.yaml
.product/projectors/: serving-host-view-projector.yaml
.product/slices/: slice-host.yaml
crates/cli/: Cargo.toml
crates/cli/src/: conform.rs  main.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs
docs/: production-seams.md  running-on-spark.md
