[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spark-interface = { path = "crates/interface" }
spark-switch = { path = "crates/switch" }
spark-queue = { path = "crates/queue" }
spark-execution = { path = "crates/execution" }
spark-exploration = { path = "crates/exploration" }
spark-executor = { path = "crates/executor" }
spark-serving = { path = "crates/serving" }
spark-sandbox = { path = "crates/sandbox" }
spark-stream = { path = "crates/stream" }
spark-host = { path = "crates/host" }
